--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,47 @@
-black==21.6b0
+aiohttp==3.7.4.post0
+async-timeout==3.0.1
+attrs==21.2.0
+beautifulsoup4==4.10.0
+black==21.11b1
+cachetools==4.2.4
+certifi==2021.10.8
+chardet==4.0.0
+charset-normalizer==2.0.7
+click==8.0.3
 discord.py==1.7.3
-python-dotenv==0.17.1
+expiringdict==1.2.1
+google-api-core==2.2.2
+google-api-python-client==2.31.0
+google-auth==2.3.3
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.53.0
+httplib2==0.20.2
+idna==3.3
+importlib-metadata==4.8.2
+multidict==5.2.0
+mypy-extensions==0.4.3
 NHentai-API==0.0.16
-tinydb==4.4.0
-python-twitter==3.5
-google-api-python-client==2.10.0
-twitch-python==0.0.19
-mcrcon
+oauthlib==3.1.1
+pathspec==0.9.0
+pkg_resources==0.0.0
+platformdirs==2.4.0
+protobuf==3.19.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==3.0.6
+python-dotenv==0.19.2
+regex==2021.11.10
+requests==2.26.0
+requests-oauthlib==1.3.0
+rsa==4.7.2
+six==1.16.0
+soupsieve==2.3.1
+tinydb==4.5.2
+tomli==1.2.2
+tweepy==4.4.0
+typed-ast==1.5.0
+typing-extensions==3.10.0.2
+uritemplate==4.1.1
+urllib3==1.26.7
+yarl==1.7.2
+zipp==3.6.0
