--- a/.env.template
+++ b/.env.template
@@ -3,6 +3,7 @@ command_prefix=%
 
 JSON_DB_DIR=json_db/db.json
 
+#content_follow cog
 Twitter_API_key=
 Twitter_API_secret=
 Twitter_Access_token_key=
@@ -13,6 +14,7 @@ Youtube_API_key=
 Twitch_Client_ID=
 Twitch_Client_Secret=
 
+#mc_server cog
 MC_Server_public_ip=
 MC_Server_pack=
 MC_Pack_version=R3.2.1
@@ -20,3 +22,5 @@ MC_Pack_Download_link=
 MC_Description=
 MC_Rcon_IP=http://172.0.0.1:25566
 MC_idle_minutes=20
+
+#nhentai cog
