Shoutout and Music

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,11 @@
-discord.py==1.7.3
-tinydb==4.5.2
+nextcord==2.0.0a10
+google-api-python-client==2.47.0
+tinydb==4.7.0
 tinytuya==1.2.10
 NHentai-API==0.0.16
 twitchAPI==2.5.3
 tweepy==4.8.0
-black==21.11b1
-async-timeout==3.0.1
-attrs==21.2.0
-beautifulsoup4==4.10.0
-cachetools==4.2.4
-certifi==2021.10.8
-chardet==4.0.0
-charset-normalizer==2.0.7
-click==8.0.3
-expiringdict==1.2.1
-google-api-core==2.2.2
-google-api-python-client==2.31.0
-google-auth==2.3.3
-google-auth-httplib2==0.1.0
-googleapis-common-protos==1.53.0
-httplib2==0.20.2
-idna==3.3
-importlib-metadata==4.8.2
-multidict==5.2.0
-mypy-extensions==0.4.3
-pathspec==0.9.0
-pkg_resources==0.0.0
-platformdirs==2.4.0
-protobuf==3.19.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycryptodome==3.11.0
-pyparsing==3.0.6
-python-dateutil==2.8.2
-python-dotenv==0.19.2
-regex==2021.11.10
-rsa==4.7.2
-six==1.16.0
-soupsieve==2.3.1
-tomli==1.2.2
-typing-extensions==3.10.0.2
-uritemplate==4.1.1
-urllib3==1.26.7
-websockets==10.1
-yarl==1.7.2
-zipp==3.6.0
+black
+wheel
+humanize
+youtube_dl
